tests/ui/transmute-mut-src-not-a-reference.nightly.stderr
error[E0308]: mismatched types
  --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/transmute-mut-src-not-a-reference.rs:15:53
   |
15 | const SRC_NOT_A_REFERENCE: &mut u8 = transmute_mut!(0usize);
   |                                      ---------------^^^^^^-
   |                                      |              |
   |                                      |              expected `&mut _`, found `usize`
   |                                      expected due to this
   |
   = note: expected mutable reference `&mut _`
                           found type `usize`
help: consider mutably borrowing here
   |
15 | const SRC_NOT_A_REFERENCE: &mut u8 = transmute_mut!(&mut 0usize);
   |                                                     ++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
